--- a/samples/sample3.html
+++ b/samples/sample3.html
@@ -97,7 +97,7 @@ section {
 
 <p>To use any of the sample website or structure, just copy the html, e.g. sample1.html. To use the main page, i.e. Home-page, copy the Public folder and delete the 'ReadMe.md' from it.</p>
 
-<p>Click <a href="https://github.com/rebflora/public/blob/main/samples/sample3.html">Code</a> for this website code. Click <a href="https://dev.rebekahflora.com/samples/index.html">Here</a> to return to the Samples webpage.
+<p>Click <a href="https://github.com/rebflora/public/blob/main/samples/sample3.html">Code</a> for this website code. Click <a href="../samples/index.html">Here</a> to return to the Samples webpage.
 </p>
 
 </section>
