--- a/samples/sample4.html
+++ b/samples/sample4.html
@@ -129,10 +129,6 @@ li {
     text-decoration: underline;
 }
 
-  .nav-link:visited {
-    color: var(--purple);
-} 
-
  .sticky {
   position: fixed;
   top: 0;
@@ -155,15 +151,16 @@ li {
 }
 
   .sticky .theme-switch {
-   height: 26px;
-   width: 55px;
+   height: 24px;
+   width: 53px;
    top: 0;
    margin-top: 10px;
 }
 
   .sticky .slider:before {
-    height: 14px;
+    height: 16px;
     width: 18px;
+    bottom: 2px;
   }
 
   .bar {
@@ -382,11 +379,10 @@ input:checked + .slider:before {
         </div>  
         <ul class="nav-menu">
           <li class="nav-item"><a href="https://dev.rebekahflora.com/samples/sample4.html" class="nav-link">Here</a></li>
-          <li class="nav-item"><a href="https://dev.rebekahflora.com/samples" class="nav-link">Samples</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Nowhere</a></li>
           <li class="nav-item"><a href="https://www.rebekahflora.com" class="nav-link">Somewhere</a></li>
           <li class="nav-item"><a href="https://github.com/rebflora/public/blob/main/samples/sample4.html" class="nav-link">Grab Code</a></li>
-          <li class="nav-item"><a href="https://dev.rebekahflora.com" class="nav-link">Home-page</a></li>
+          <li class="nav-item"><a href="../samples/index.html" class="nav-link">Samples</a></li>
         </ul>
         <div class="hamburger">
           <span class="bar"></span>
