--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a href="https://dev.rebekahflora.com" style="text-decoration: none;">
           <img src="./images/icons/Logo_69x69.png" alt="logo">
         </a>
-          <span style= "font-size: x-large;"><b>Dev</b></span>
+          <span class="site-name">Dev</span>
         
         </div>  
         <ul class="nav-menu">
