--- a/samples/index.html
+++ b/samples/index.html
@@ -36,7 +36,7 @@
             <button class="btn" type="button">Dark</button>
           </div>
           <img src="../images/icons/Logo_69x69.png" alt="logo">
-          <span style= "font-size: x-large;"><b>Dev</b></span>
+          <span class="site-name">Dev</span>
         </div>  
         <ul class="nav-menu">
           <li class="nav-item"><a href="../index.html" class="nav-link">Home-page</a></li>
