--- a/samples/sample4.html
+++ b/samples/sample4.html
@@ -141,10 +141,33 @@ li {
   z-index: 2;
 }
 
+.sticky .theme-switch {
+   height: 24px;
+   width: 53px;
+   top: 0;
+   margin-top: 10px;
+}
+
+  .sticky .slider:before {
+    height: 16px;
+    width: 18px;
+    bottom: 2px;
+}
+
+  .sticky .logo {
+    font-size: 14px;
+    margin-top: 5px;
+}
+
+  .sticky .site-name {
+    font-size: 20px;
+}
+  
  .sticky img {
   height: 36px;
   margin-top: 5px;
 }
+
   .sticky .nav-link {
   height: 40px;
   font-size: 15.5px;
@@ -161,6 +184,10 @@ li {
     height: 16px;
     width: 18px;
     bottom: 2px;
+  }
+
+  .sticky .hamburger {
+    margin-top: 5px;
   }
 
   .bar {
@@ -375,7 +402,7 @@ input:checked + .slider:before {
             </div>
           </div>
           Sample
-          <span class= "site-name"><b>Sample</b></span>
+          <span class= "site-name">Sample</span>
         </div>  
         <ul class="nav-menu">
           <li class="nav-item"><a href="https://dev.rebekahflora.com/samples/sample4.html" class="nav-link">Here</a></li>
