--- a/samples/sample4.html
+++ b/samples/sample4.html
@@ -204,8 +204,11 @@ li {
   .nav-menu {
       position: fixed;
       right: -100%;
-      top: 120px;
-      padding: 0 0;
+      top: 0;
+      bottom: 0;
+      padding: 58px 5px;
+      margin: 0;
+      display: block; 
       flex-direction: column;
       background-color: #000;
       width: 40%;
@@ -222,20 +225,21 @@ li {
   }
 
   .nav-item {
-     margin: 0px 0;
-     margin-top: 0px;
-     
-      
+    margin: 0 4px;   
+  }
+
+  .nav-link {
+    text-align: left;
   }
 
   .hamburger {
       display: block;
       cursor: pointer;
-      margin-top: 15px;
+      margin-top: 23px;
       z-index: 2;
   }
 
-  .logo{
+  .logo {
   margin-top: 15px;
   }
 }
