--- a/samples/sample4.html
+++ b/samples/sample4.html
@@ -177,6 +177,7 @@ li {
   .sticky .theme-switch {
    height: 24px;
    width: 53px;
+   left: 8px;
    top: 0;
    margin-top: 10px;
 }
@@ -207,12 +208,12 @@ li {
       right: -100%;
       top: 0;
       bottom: 0;
-      padding: 58px 5px;
+      padding: 60px 5px;
       margin: 0;
       display: block; 
       flex-direction: column;
       background-color: #000;
-      width: 40%;
+      width: 45%;
       border-radius: 1px;
       text-align: center;
       transition: 0.3s;
