--- a/samples/sample4.html
+++ b/samples/sample4.html
@@ -131,6 +131,7 @@ li {
 
  .sticky {
   position: fixed;
+  display: flex;
   top: 0;
   left: 0;
   height: 40px;
@@ -144,6 +145,7 @@ li {
 .sticky .theme-switch {
    height: 24px;
    width: 53px;
+   left: 7px;
    top: 0;
    margin-top: 10px;
 }
@@ -152,7 +154,7 @@ li {
     height: 16px;
     width: 18px;
     bottom: 2px;
-}
+  }
 
   .sticky .logo {
     font-size: 14px;
@@ -173,20 +175,6 @@ li {
   height: 40px;
   font-size: 15.5px;
 }
-
-  .sticky .theme-switch {
-   height: 24px;
-   width: 53px;
-   left: 8px;
-   top: 0;
-   margin-top: 10px;
-}
-
-  .sticky .slider:before {
-    height: 16px;
-    width: 18px;
-    bottom: 2px;
-  }
 
   .sticky .hamburger {
     margin-top: 5px;
@@ -227,7 +215,7 @@ li {
   }
 
   .nav-item {
-    margin: 0 4px;   
+    margin: 0 0;   
   }
 
   .nav-link {
