--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </header>
       
       <main>
-     <section class="section-1"><h2>Continuum</h2>
+     <section class="section-1"><h2>Websites</h2>
       <p id="msg"></p>
     </section>
     <section class="section-2">
@@ -70,15 +70,15 @@
       <p>This is another paragraph. You might need another paragraph, or you might not; in which case you would need to delete this paragraph. Click 'About' in the navbar above for more information.</p>
     </section>
     <article>
-      <h1>Continuum, Continuum, Continuum</h1>
+      <h1>Free Simple Websites</h1>
     <h2>Process</h2>
     <ul>
       <li class="list">Thinking</li>
       <li class="list-2">Existing</li>
       <li class="list">Observing</li>
     </ul> 
-    <p>This is another paragraph below a list which has a subheading called "Process"; and a main heading called "Continuum". Below this paragraph is a minor heading called "Continuum". Irrelevant minor heading I bet.</p>
-    <h3>Continuum, Continuum, Continuum</h3>
+    <p>This is another paragraph below a list which has a subheading called "Process"; and a main heading called <i>Free Simple Websites</i>. Below this paragraph is a minor heading called <i>Freebie</i>.</p>
+    <h3>Freebie, Freebie, Freebie.</h3>
   </article>
   <section class="section-2">
     <h2>Hmmm</h2>
