--- a/samples/sample2.html
+++ b/samples/sample2.html
@@ -25,6 +25,8 @@ header {
 }
 
 main {
+    margin: 1rem auto;
+    max-width: 600px;
     padding: 1rem;
     background-color:f1d7001f;
 }
@@ -51,19 +53,15 @@ section {
 
 <main>
 
-<article>
-<h2><span style="color:#460000;"><span style="background-color:#757575; display: inline-block; padding:3px">This must be a quack website design. Well,...</span></span></h2>
-</article>
 
-<section>
-<h2><span style="background-color:#360000; display: inline-block; padding:2px">...if you are a newbie, looking for a freebie, then feel free to use the code.</span></h2>
+<h2><span style="color:#460000;"><span style="background-color:#757575; display: inline-block; padding:3px">This is a simple website design. So,...</span></span></h2>
+
+<h2><span style="color: #757575; background-color:#360000; display: inline-block; padding:2px">...if you are a newbie, looking for a freebie, feel free to use the code.</span></h2>
 
 <h3><span style="color:#000000;"><span style="background-color:#757575; padding:2px">&nbsp;or&nbsp;</span></span></h3>
 
-<h2><span style="background-color:#360000; display: inline-block; padding:2px">If you just need a landing page. </span>
-   
-
-</section>
+<h2><span style="color: #757575; background-color:#360000; display: inline-block; padding:2px">If you just need a landing page. </span>
+<br></br>
 <button type="button" style="height: 30px; width: 75px; font-size: 14px; font-weight: bold; text-align: center; color: #666; background-color: #360000; cursor: pointer;"><a href="../samples/index.html" style="color: #666; text-decoration: none;">Go Back</a></button> 
 
 </main>
