--- a/samples/sample3.html
+++ b/samples/sample3.html
@@ -55,8 +55,9 @@ footer {
 }
 
 main {
+    margin: 1rem auto;
+    max-width: 600px;
     padding: 1rem;
-    padding-right: 4rem;
     background-color: #f1d9000e;
 }
 
@@ -76,17 +77,15 @@ section {
 <body>
 
 <div class="container">
-
+  <main>
 <header>
 <h2>Sample 3</h2>
 </header>
 
-<main>
-
 <article>
 <h3>Article</h3>
 
-<p> This is another sample of a simple website, it's not a continuation of <a href="https://dev.rebekahflora.com">dev.rebekahflora.com;</a> just another sample. It has it's style tag, i.e. css inside the the html. You can split the style from the html if you so desire.
+<p> This is another sample of a simple website. It has it's style tag/script, i.e. css inside the the html. You can split the style from the html if you so desire.
 </p>
 <p></p>
 
@@ -102,9 +101,10 @@ section {
 
 </section>
 
-</main>
+
 
 <footer>Copyright &copy; Rebekah-Flora </footer>
+</main>
 </div>
 </body>
 </html>
