--- a/samples/sample3.html
+++ b/samples/sample3.html
@@ -38,6 +38,13 @@ div.container {
     border: 5px solid transparent;
 }
 
+main {
+    margin: 2rem auto;
+    max-width: 600px;
+    padding: 1rem;
+    background-color: #0f0c00;
+}
+
 header {
     padding: 1em;
     color: #696969;
@@ -47,6 +54,21 @@ header {
     border-bottom: 1px solid #2f2f2f;
 }
 
+article {
+    font-size: medium;
+    padding-left: 1rem;
+    border-bottom: 1px solid #2f2f2f;
+    overflow: hidden;
+}
+
+section {
+    font-size: large;
+    padding-left: 1rem;
+    overflow: hidden;
+    border-bottom: 1px solid #2f2f2f;
+    margin-bottom: 1rem;
+}
+
 footer {
     font-size: small;
     color: #360000;
@@ -54,35 +76,18 @@ footer {
     padding: 5px;
 }
 
-main {
-    margin: 1rem auto;
-    max-width: 600px;
-    padding: 1rem;
-    background-color: #f1d9000e;
-}
-
-article {
-    padding-left: 1rem;
-    border-bottom: 1px solid #2f2f2f;
-    overflow: hidden;
-}
-section {
-    font-size: large;
-    padding-left: 1rem;
-    overflow: hidden;
-    border-bottom: 1px solid #2f2f2f;
-}
 	</style>
 </head>
 <body>
 
 <div class="container">
   <main>
-<header>
+
+  <header>
 <h2>Sample 3</h2>
 </header>
 
-<article>
+  <article>
 <h3>Article</h3>
 
 <p> This is another sample of a simple website. It has it's style tag/script, i.e. css inside the the html. You can split the style from the html if you so desire.
@@ -91,7 +96,7 @@ section {
 
 </article>
 
-<section>
+  <section>
 <h3>Section</h3>
 
 <p>To use any of the sample website or structure, just copy the html, e.g. sample1.html. To use the main page, i.e. Home-page, copy the Public folder and delete the 'ReadMe.md' from it.</p>
