--- a/samples/sample3.html
+++ b/samples/sample3.html
@@ -4,6 +4,10 @@
 	<title>Sample-3</title>
 	<style type="text/css">
 	
+  * {
+    box-sizing: border-box;
+  }
+
 body {
   font-size: medium;
   font-family: Calibri, Helvetica, sans-serif;
@@ -42,6 +46,7 @@ main {
     margin: 2rem auto;
     max-width: 600px;
     padding: 1rem;
+    border: 2px solid #0f0000;
     background-color: #0f0c00;
 }
 
@@ -51,7 +56,8 @@ header {
     background-color: #360000;
     clear: left;
     text-align: center;
-    border-bottom: 1px solid #2f2f2f;
+    border-radius: 5px;
+    border: 1px solid #2f2f2f;
 }
 
 article {
@@ -74,6 +80,7 @@ footer {
     color: #360000;
     background-color: #696969;
     padding: 5px;
+    border-radius: 5px;
 }
 
 	</style>
