--- a/samples/sample2.html
+++ b/samples/sample2.html
@@ -5,6 +5,10 @@
 	<link rel="shortcut icon" type="image/png" href="images/Logo_transparent.png"/>
 	<style type="text/css">
 	
+    * {
+    box-sizing: border-box;
+  }
+
 body {
     background-color: #222222;
     background-image: url("images/rug.jpg");
@@ -25,7 +29,7 @@ header {
 }
 
 main {
-    margin: 2rem auto;
+    margin: 1rem auto;
     max-width: 600px;
     padding: 1rem;
 }
