--- a/samples/sample3.html
+++ b/samples/sample3.html
@@ -46,8 +46,9 @@ main {
     margin: 2rem auto;
     max-width: 600px;
     padding: 1rem;
-    border: 2px solid #0d1d00;
     background-color: #0f0c00;
+    border: 2px solid #0d1d00;
+    border-radius: 15px;
     box-shadow:
           0 10px 27px rgba(25, 51, 0, 0.2);
 }
